# realtime-analytics-pipeline

./: .gitignore  README.md  flatteneddirectory.txt  run-tests.sh  run-unit-tests.sh
docs/: README.md  adding_jobs.md
docs/api/: README.md
docs/architecture/: README.md
docs/contributing/: README.md
docs/modules/: README.md
docs/modules/cache/: README.md
docs/modules/processing/: README.md  adding-jobs.md
docs/modules/storage/: README.md
docs/setup/: README.md
docs/setup/infrastructure/: clickhouse.md  kafka.md  monitoring.md  redis.md
docs/setup/services/: cache.md  ingestion.md  processing.md  storage.md
docs/testing/: README.md  endpoints.md
docs/testing/e2e/: README.md
docs/testing/performance/: README.md
docs/testing/unit/: README.md
docs/troubleshooting/: README.md
infrastructure/compose/: .env.test  dev.yml  docker-compose.test.yml  docker-compose.unit-test.yml  docker-compose.yml
infrastructure/compose/kafka/: Dockerfile
infrastructure/monitoring/jmx/: kafka-jmx-exporter.yml
infrastructure/monitoring/prometheus/: prometheus.yml
services/cache/: Dockerfile  pyproject.toml  requirements.txt
services/cache/src/: main.py  startup.py
services/cache/src/api/: dependencies.py  router.py
services/cache/src/api/endpoints/: health.py  metrics.py
services/cache/src/api/v1/routes/: health.py  metrics.py
services/cache/src/core/: config.py  logger.py  logging_config.py
services/cache/src/domain/: __init__.py  models.py  operations.py
services/cache/src/infrastructure/clickhouse/: client.py
services/cache/src/infrastructure/kafka/: __init__.py  consumer.py  flink_consumer.py  message_parser.py  metrics.py  worker.py
services/cache/src/infrastructure/redis/: __init__.py  client.py  constants.py  repository.py
services/cache/src/metrics/: aggregator.py  bucketing.py  key_hash.py
services/cache/src/realtime/: consumer.py  repository.py
services/cache/src/services/: cache_service.py  cache_warming.py
services/cache/tests/unit/api/: test_api_endpoints.py
services/cache/tests/unit/domain/: test_domain_models.py
services/cache/tests/unit/infrastructure/kafka/: test_consumer.py  test_consumer_ready.py  test_message_parser_and_metrics.py  test_worker.py
services/cache/tests/unit/infrastructure/redis/: test_repository.py
services/cache/tests/unit/services/: test_cache_service.py
services/ingestion/: Dockerfile  admin.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt
services/ingestion/scripts/: entrypoint.sh
services/ingestion/src/: main.py  startup.py
services/ingestion/src/api/v1/: dependencies.py  router.py
services/ingestion/src/api/v1/endpoints/: health.py  track.py
services/ingestion/src/core/: config.py  logger.py  logging_config.py  tracing.py
services/ingestion/src/infrastructure/kafka/: admin.py  producer.py
services/ingestion/src/schemas/: analytics_event.py
services/ingestion/tests/: conftest.py
services/ingestion/tests/unit/: test_api_endpoints.py  test_config_dependencies.py  test_main.py  test_schemas.py  test_startup.py
services/ingestion/tests/unit/api/: test_dependencies.py
services/ingestion/tests/unit/api/v1/endpoints/: test_track.py
services/ingestion/tests/unit/core/: test_config.py  test_logging_config.py
services/ingestion/tests/unit/infrastructure/kafka/: test_admin.py  test_producer.py
services/ingestion/tests/unit/schemas/: test_analytics_event.py
services/ingestion/track_service/: producer.py
services/processing/: Dockerfile.flink  Dockerfile.processing  pyproject.toml  requirements.txt
services/processing/src/: main.py
services/processing/src/connectors/: kafka_sink.py  kafka_source.py
services/processing/src/core/: config.py  job_coordinator.py  logger.py  logging_config.py
services/processing/src/core/schemas/: event_metrics_sink.py  event_source.py  performance_metrics_sink.py  session_metrics_sink.py
services/processing/src/jobs/: base_job.py  event_aggregator.py  metric_aggregator.py  performance_tracker.py  session_tracker.py
services/processing/src/transformations/: device_categorizer.py
services/processing/tests/unit/core/: test_config.py  test_job_coordinator.py  test_logger.py
services/processing/tests/unit/jobs/: test_base_job.py  test_event_aggregator.py
services/processing/tests/unit/transformations/: test_device_categorizer.py
services/storage/: Dockerfile  pyproject.toml  requirements.txt
services/storage/src/: batch_processor.py  clickhouse_client.py  kafka_batch_consumer.py  main.py  metrics.py
shared/: __init__.py  metrics.py
shared/config/: __init__.py
shared/constants/: __init__.py  environments.py  redis_keys.py  tables.py  topics.py
shared/logging/: formatting.py  json.py  logger.py
shared/utils/: retry.py
tests/: Dockerfile  conftest.py  requirements.txt  tests_helpers.py
tests/e2e/: conftest.py  test_full_pipeline.py
tests/helpers/: watermark.py
tests/performance/: conftest.py  load_test.py  test_latency.py  test_throughput.py
tests/performance/core/: config.py  generator.py  (+1 more)
tests/unit/: conftest.py
tests/utils/: produce_cache_test_messages.py
(+33 files in other folders)
