[project]
name = "cache-service"
version = "0.1.0"
description = "Real-time metrics caching service for analytics pipeline"
requires-python = ">=3.12"

[project.dependencies]
fastapi = "^0.111.0"
uvicorn = "^0.30.0"
redis = "^5.0.0"
confluent-kafka = "^2.4.0"
pydantic = "^2.8.0"
pydantic-settings = "^2.3.0"
prometheus-client = "^0.20.0"
python-json-logger = "^2.0.7"
