[project]
name = "cache"
version = "0.1.0"
description = "Real-time analytics cache service"
authors = [ { name = "Analytics Team" } ]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110.0,<0.112.0",
    "uvicorn[standard]>=0.29.0,<0.31.0",
    "aiokafka>=0.10.0,<0.11.0",
    "redis>=5.0.0,<6.0.0",
    "prometheus-client>=0.19.0,<0.21.0",
    "pydantic-settings>=2.2.0,<3.0.0",
    "fakeredis>=2.23.0,<3.0.0"
]

[project.optional-dependencies]
test = [
        "pytest>=8.2.0,<9.0.0",
        "pytest-asyncio>=0.23.0,<0.24.0",
        "pytest-cov>=5.0.0,<6.0.0",
        "pytest-mock>=3.14.0,<4.0.0",
        "httpx>=0.27.0,<0.28.0",
]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra"
asyncio_mode = "auto"
testpaths = [
    "tests/unit"
]
pythonpath = ["src"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"