[project]
name = "processing-service"
version = "0.1.0"
description = "Real-time analytics processing service"
dependencies = [
    "pydantic-settings==2.9.1",
    "confluent-kafka==2.10.0",
    "python-json-logger==3.3.0",
]

[project.optional-dependencies]
test = [
    "pytest==8.4.1",
    "pytest-asyncio==1.0.0",
    "pytest-mock==3.14.0",
    "pytest-cov==6.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = ["--cov=src", "--cov-report=term-missing"]
asyncio_mode = "auto"
