[project]
name = "processing-service"
version = "0.1.0"
description = "Real-time analytics processing service"
dependencies = [
    "apache-flink==2.0.0",
    "pydantic-settings==2.9.1",
    "confluent-kafka==2.10.0",
    "python-json-logger==3.3.0",
]

[project.optional-dependencies]
test = [
    "pytest==8.4.1",
    "pytest-asyncio==1.0.0",
    "pytest-mock==3.14.0",
    "pytest-cov==6.0.0",
]

[tool.coverage.run]
source = ["src"]
branch = true
data_file = "/tmp/.coverage"

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
]
show_missing = true
skip_covered = false

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = [
    "--strict-markers",
    "--strict-config",
]
asyncio_mode = "auto"